--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <h1>Adivina el número</h1>
-    <form action="#">
-        <label class="fill__lable" for="email">Introduce aquí tu número:</label>
-        <input type="number" />
-        <input type="submit" value="Prueba" />
+    <form class="form" action="#">
+        <label for="email">Introduce aquí tu número:</label>
+        <input class="form__input" type="number" />
+        <input class="form__submit" type="submit" value="Prueba" />
     </form>
-    <p>Pista: Escribe el número y dale a Prueba</p>
-    <p>Número de intestos: 0</p>
+    <p class="text">Pista: Escribe el número y dale a Prueba</p>
+    <p class="text">Número de intestos: 0</p>
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
