--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input class="form__submit js-form__submit" type="submit" value="Prueba" />
     </form>
     <p class="text js-clue">Pista: Escribe el número y dale a Prueba</p>
-    <p class="text js-counting-text">Número de intestos: 0</p>
+    <p class="text js-counting-text">Número de intentos: 0</p>
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
