--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Adivina el número</h1>
     <form class="form" action="#">
         <label for="email">Introduce aquí tu número:</label>
-        <input class="form__input js-form__input" type="number" />
+        <input class="form__input js-form__input" type="number" placeholder="introduce un número" />
         <input class="form__submit js-form__submit" type="submit" value="Prueba" />
     </form>
     <p class="text js-clue">Pista: Escribe el número y dale a Prueba</p>
